--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,19 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=manager
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=manager
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.show_sql=true
+
+spring.application.name=leavesystem
+server.servlet.context-path=/leavesystem
+server.port=8080
+spring.datasource.url=jdbc:postgresql://localhost:5432/leavedb
+spring.datasource.username=postgres
+spring.datasource.password=manager
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.properties.hibernate.default_schema=leaveschema
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
